2009-01-21  David Hyatt  <hyatt@apple.com>

        Fix bustage in RenderThemeWin. It's actually terrible that RenderThemeWin is using absoluteContentBox,
        but that's a problem for another day.

        * rendering/RenderThemeWin.cpp:
        (WebCore::RenderThemeWin::paintSearchFieldCancelButton):
        (WebCore::RenderThemeWin::paintSearchFieldResultsDecoration):
        (WebCore::RenderThemeWin::paintSearchFieldResultsButton):

2009-01-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Dave Hyatt.

        Bug 23470: Crash when page load occurs while processing scroll event with MallocScribble enabled
        <https://bugs.webkit.org/show_bug.cgi?id=23470>

        Add a RefPtr protector to handleWheelEvent to guard against destruction
        while processing the scroll event.  Alas the absurd set of circumstances
        required to trigger this do not appear to be reproducible in DRT.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleWheelEvent):

2009-01-21  David Hyatt  <hyatt@apple.com>

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23453

        Devirtualize the width/height/x/y methods of the render tree.  The methods are now non-virtual on RenderBox.
        Many functions that were previously in RenderObject.cpp are now in RenderBox.cpp.

        Reviewed by Eric Seidel and Darin Adler

        * WebCore.base.exp:
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::sizingBox):
        * dom/ContainerNode.cpp:
        (WebCore::ContainerNode::getUpperLeftCorner):
        (WebCore::ContainerNode::getLowerRightCorner):
        * dom/Element.cpp:
        (WebCore::Element::offsetLeft):
        (WebCore::Element::offsetTop):
        (WebCore::Element::offsetWidth):
        (WebCore::Element::offsetHeight):
        (WebCore::Element::offsetParent):
        (WebCore::Element::clientLeft):
        (WebCore::Element::clientTop):
        (WebCore::Element::clientWidth):